--- a/modules/administration/pages/auditing.adoc
+++ b/modules/administration/pages/auditing.adoc
@@ -54,7 +54,7 @@ For more information about this method, see the {productname} API Guide.
 [IMPORTANT]
 ====
 In addition to retrieving CVE information from channel data, {productname} now includes an experimental feature that fetches CVE details from OVAL files.
-This functionality is currently in its *first phase* and is considered a *Tech Preview*.
+This functionality is currently considered a *Technology Preview*.
 
 Users are encouraged to experiment with this feature and share feedback.
 However, it is not yet recommended for production use without thorough testing in a test environment.
