--- a/modules/administration/pages/auditing.adoc
+++ b/modules/administration/pages/auditing.adoc
@@ -67,7 +67,7 @@ These two sources provide the metadata for conducting CVE audits, each serving a
 Channels::
 Channels include the updated software packages, including the patches, and provide insights into the essential patches required to address vulnerabilities.
 
-OVAL (Tech Preview)::
+OVAL (Technology Preview)::
 In contrast, OVAL data supply the information about vulnerabilities themselves, and packages that render a system vulnerable to a CVE.
 
 While it is possible to conduct CVE audits using only channels data, synchronizing OVAL data enhances the accuracy of the results, particularly in cases involving zero-day vulnerabilities or partially patched vulnerabilities.
