--- a/modules/administration/pages/auditing.adoc
+++ b/modules/administration/pages/auditing.adoc
@@ -134,7 +134,7 @@ systemctl restart tomcat taskomatic
 Allow the task to complete before continuing with the CVE audit.
 
 
-=== Collecting CPE
+=== Collect CPE
 
 To be able to accurately identify what vulnerabilities apply to a certain client, we need to identify the operating system product that client uses. To do that, we collect the CPE (Common Platform Enumeration) of the client as a salt grain, then we save it to the database.
 
