Typos and style fixes.

--- a/modules/administration/pages/auditing.adoc
+++ b/modules/administration/pages/auditing.adoc
@@ -11,7 +11,7 @@ In the {productname} {webui}, navigate to [guimenu]``Audit`` to perform auditing
 
 == CVE Audits
 
-A CVE (common vulnerabilities and exposures) is a fix for a publicly known security vulnerability.
+A CVE (Common Vulnerabilities and Exposures) is a fix for a publicly known security vulnerability.
 
 [IMPORTANT]
 ====
@@ -30,7 +30,7 @@ We recommend that before you begin a CVE audit you refresh the data to ensure yo
 . In the {productname} {webui}, navigate to menu:Admin[Task Schedules] and select the ``cve-server-channels-default`` schedule.
 . Click btn:[cve-server-channels-bunch].
 . Click btn:[Single Run Schedule] to schedule the task.
-Allow the task to complete before continuing with the CVE audit.
+  Allow the task to complete before continuing with the CVE audit.
 
 .Procedure: Verifying Patch Status
 . In the {productname} {webui}, navigate to menu:Audit[CVE Audit].
@@ -54,7 +54,7 @@ For more information about this method, see the {productname} API Guide.
 [IMPORTANT]
 ====
 In addition to retrieving CVE information from channel data, {productname} now includes an experimental feature that fetches CVE details from OVAL files.
-This functionality is currently in its *first phase* and is considered a *Tech Preview*.
+This functionality is currently considered a *Technology Preview*.
 
 Users are encouraged to experiment with this feature and share feedback.
 However, it is not yet recommended for production use without thorough testing in a test environment.
@@ -67,7 +67,7 @@ These two sources provide the metadata for conducting CVE audits, each serving a
 Channels::
 Channels include the updated software packages, including the patches, and provide insights into the essential patches required to address vulnerabilities.
 
-OVAL (Tech Preview)::
+OVAL (Technology Preview)::
 In contrast, OVAL data supply the information about vulnerabilities themselves, and packages that render a system vulnerable to a CVE.
 
 While it is possible to conduct CVE audits using only channels data, synchronizing OVAL data enhances the accuracy of the results, particularly in cases involving zero-day vulnerabilities or partially patched vulnerabilities.
@@ -134,7 +134,7 @@ systemctl restart tomcat taskomatic
 Allow the task to complete before continuing with the CVE audit.
 
 
-=== Collecting CPE
+=== Collect CPE
 
 To be able to accurately identify what vulnerabilities apply to a certain client, we need to identify the operating system product that client uses. To do that, we collect the CPE (Common Platform Enumeration) of the client as a salt grain, then we save it to the database.
 
