Apply suggestions from code review

--- a/modules/common-workflows/pages/workflow-install-from-selfinstall-on-ppc.adoc
+++ b/modules/common-workflows/pages/workflow-install-from-selfinstall-on-ppc.adoc
@@ -79,4 +79,4 @@ Ensure [literal]``$device`` points to the fast, persistent storage.
 For more information, see xref:installation-and-upgrade:container-deployment/mlm/server-deployment-mlm.adoc#deploy-mlm-server-persistent-storage[Persistent Volumes].
 
 
-To continue with deployment, see xref:installation-and-upgrade:container-deployment/mlm/server-deployment-mlm.adoc#deploy-mlm-server-mgradm[Server Deployment].Deployment].
+To continue with deployment, see xref:installation-and-upgrade:container-deployment/mlm/server-deployment-mlm.adoc#deploy-mlm-server-mgradm[Server Deployment].
