--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-mlm.adoc
@@ -260,8 +260,7 @@ You will be required to enter the {productname} Extension regcode below.
 
 Enter the {productname} Extension regcode.
 . When the installation completes, log in to the newly installed server as root.
-. Update the System (optional, if the system was not set to
-download updates during install):
+. Update the System (optional, if the system was not set to download updates during install):
 
 +
 
