--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-mlm.adoc
@@ -53,8 +53,8 @@ An FQDN typically follows the format <host>.<domain>.com.
 
 For instance:
 
-* [literal]``{productname}.example.com``
-* [literal]``{productname}.container.lab``
+* [literal]``mlm.example.com``
+* [literal]``mlm.container.lab``
 
 For more information, see the section on network requirements in xref:installation-and-upgrade:network-requirements.adoc[].
 ====
@@ -225,13 +225,29 @@ transactional-update
 
 . Reboot.
 
+[IMPORTANT]
+====
+{sle-micro} is designed to update itself automatically by default and will reboot after applying updates.
+However, this behavior is not desirable for the {productname} environment.
+To prevent automatic updates on your server, {productname} disables the transactional-update timer during the bootstrap process.
 
+If you prefer the {sle-micro} default behavior, enable the timer by running the following command:
+
+[source, shell]
+----
+systemctl enable --now transactional-update.timer
+----
+====
+
+To continue with deployment, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc#deploy-suma-server-persistent-storage[].
 
 
 [[deploy-mlm-server-sles]]
 === Deploy on {sles} {bci-mlm}
 
 Alternatively, you can deploy {productname} on {sles} {bci-mlm}.
+
+
 The following procedure describes the main steps of the installation process.
 
 .Procedure: Installing {productname} on {sles} {bci-mlm}
