--- a/modules/administration/pages/users.adoc
+++ b/modules/administration/pages/users.adoc
@@ -61,9 +61,9 @@ Use this field to specify restricted character occurences.
 Max Character Occurences::
 Use this field to specify maximum character occurences.
 
-Use button [button]``Save`` to save any of the changed password settings.
+Click btn:[Save] to save any of the changed password settings.
 
-Use button [button]``Reset`` to change any settings to the default ones.
+Use btn:[Reset] to change any settings to the default ones.
 
 [NOTE]
 ====
