Restructure Server Install scenario micro/sles (#3830) (#3857)
* https://bugzilla.suse.com/show_bug.cgi?id=1239801
* https://github.com/SUSE/spacewalk/issues/26739
* move note about SLEM update behavior to SLE Micro section
* add links where to continue after host OS install (micro/sles)
* make sure mgradm mgradm-bash-completion gets installed
* reboot is safe net

--- a/modules/common-workflows/pages/workflow-install-from-selfinstall-on-ppc.adoc
+++ b/modules/common-workflows/pages/workflow-install-from-selfinstall-on-ppc.adoc
@@ -75,7 +75,8 @@ mgr-storage-server $device
 +
 Ensure [literal]``$device`` points to the fast, persistent storage.
 +
-For more information, see xref:installation-and-upgrade:container-deployment/mlm/server-deployment-mlm.adoc#_persistent_volumes[Persistent Volumes].
+
+For more information, see xref:installation-and-upgrade:container-deployment/mlm/server-deployment-mlm.adoc#deploy-mlm-server-persistent-storage[Persistent Volumes].
 
 
-To continue with deployment, see xref:installation-and-upgrade:container-deployment/mlm/server-deployment-mlm.adoc#_deploy_with_mgradm[Server Deployment].
+To continue with deployment, see xref:installation-and-upgrade:container-deployment/mlm/server-deployment-mlm.adoc#deploy-mlm-server-mgradm[Server Deployment].
