Underline where to find info about storing GPG key permanently.
* https://github.com/SUSE/spacewalk/issues/26833
* https://bugzilla.suse.com/show_bug.cgi?id=1240225

--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -47,6 +47,9 @@ For example, execute the [command]``spacewalk-repo-sync`` from the command line 
 /usr/bin/spacewalk-repo-sync -c <channellabelname> -t yum
 ----
 
+This command and procedure is for temporary GPG key synchronization only.
+For storing the key permantenly, see this section later on.
+
 The underlying [command]``zypper`` call will import the key, if it is available.
 The {webui} does not offer this feature.
 
@@ -90,12 +93,16 @@ The key would also persist if the chroot environment would be cleaned.
 
 .Procedure: Creating a Software Repository with GPG Key
 
-. The command to import a key into the keyring is:
+. On the container horst, the command to import a key into the keyring, is:
+
 +
+
+[source,shell]
 ----
 mgradm gpg add /path/to/gpg.key
 ----
 
+. For more information, see xref:client-configuration:autoinst-owngpgkey.adoc[].
 
 [NOTE]
 ====
