--- a/modules/specialized-guides/pages/salt/salt-monitoring.adoc
+++ b/modules/specialized-guides/pages/salt/salt-monitoring.adoc
@@ -1,7 +1,7 @@
 [[salt-monitoring]]
 = Monitoring {salt} Events
 
-In some cases the {salt} event bus could publish significant amount of events with a high rate, what could make it hard to analize.
+In some cases the {salt} event bus could publish significant amount of events with a high rate, what could make it hard to analyze.
 Getting the statistics based on the events published in the {salt} event bus can help to identify possible weak points and perform {salt} internals profiling.
 
 [[saline]]
@@ -25,8 +25,7 @@ In addition to its role as a Prometheus exporter, Saline also provides the [lite
 To deploy Saline on the {productname} Server use [command]``mgradm upgrade podman`` with [option]``--saline-replicas 1``.
 Saline can be deployed during the installation of the {productname} Server using [command]``mgradm install podman`` with [option]``--saline-replicas 1``.
 The only possible values for [option]``--saline-replicas`` are ``1`` or ``0``.
-The default port [option]``8216`` can be changed with specifying [option]``--saline-port NNNN`` (where [literal]``NNNN`` is a desired port number) on calling [command]``mgradm upgrade podman``.
-After finishing the deployment [literal]``{productname}-server-saline@0.service`` should be configured on the {productname} Server host system.
+After finishing the deployment [literal]``{productname}-saline.service`` should be configured on the {productname} Server host system.
 
 == {salt} master configuration recommendations
 
