--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-mlm.adoc
@@ -288,9 +288,20 @@ zypper up
 . Reboot.
 . Log in as root and install [package]``podman`` plus [package]``mgradm`` and [package]``mgradm-bash-completion`` (if not already automatically installed):
 
++
+
 [source,shell]
 ----
 zypper install podman mgradm mgradm-bash-completion
+----
+
+. Start the Podman service by rebooting the system, or running a command:
+
++
+
+[source, shell]
+----
+systemctl enable --now podman.service
 ----
 
 
