--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -295,10 +295,24 @@ zypper up
 . Reboot.
 . Log in as root and install [package]``podman`` plus [package]``mgradm`` and [package]``mgradm-bash-completion`` (if not already automatically installed):
 
++
+
 [source,shell]
 ----
 zypper install podman mgradm mgradm-bash-completion
 ----
+
+
+. Start the Podman service by rebooting the system, or running a command:
+
++
+
+[source, shell]
+----
+systemctl enable --now podman.service
+----
+
+
 
 // FIXME: Should come later, after configuring storage and then run with FQDN
 // . Finish the {productname} installation on {sles} {bci-suma} by running command:
