Additional step included in the proxy installation procedure.

--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-mlm.adoc
@@ -210,10 +210,21 @@ zypper up
 . Log in as root and install [package]``podman`` plus [package]``mgrpxy`` and [package]``mgrpxy-bash-completion`` (if not already automatically installed):
 
 +
+
 [source,shell]
 ----
 zypper install podman mgrpxy mgrpxy-bash-completion
 ----
+
+. Start the Podman service by rebooting the system, or running a command:
+
++
+
+[source, shell]
+----
+systemctl enable --now podman.service
+----
+
 
 To continue with deployment, see xref:installation-and-upgrade:container-deployment/mlm/proxy-deployment-mlm.adoc#deploy-mlm-proxy-persistent-storage[].
 
