proxy hardware requirements https://bugzilla.suse.com/show_bug.cgi?id=1240635 https://github.com/SUSE/spacewalk/issues/26883

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -22,9 +22,9 @@ For {productname} {smr} hardware requirements, see xref:retail:retail-requiremen
 [[server-hardware-requirements]]
 == Server Requirements
 
-One of {sle-micro} {microversion} or {sles} {sles} {bci-mlm} is the operating system of the container host.
+One of {sl-micro} {microversion} or {sles} {bci-mlm} is the operating system of the container host.
 In the following, {sles} as the installed host operating system is explicitly mentioned only if it matters.
-Otherwise we either write {sle-micro} or just host operating system.
+Otherwise we either write {sl-micro} or just host operating system.
 
 The container host with {sle-micro} as operating system requires as free disk space:
 
@@ -171,6 +171,8 @@ For more information about managing a large number of clients, see xref:speciali
 [[proxy-hardware-requirements]]
 == Proxy Requirements
 
+One of {sl-micro} {microversion} or {sles} {bci-mlm} is the operating system of the container host.
+
 [cols="1,3,2", options="header"]
 .Proxy Hardware Requirements
 |===
@@ -193,7 +195,7 @@ For more information about managing a large number of clients, see xref:speciali
 
 | Disk Space
 | [path]``/`` (root directory)
-| Minimum 40 GB
+| Minimum 20 GB
 
 |
 | [path]``/var/lib/containers/storage/volumes``
