--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -173,6 +173,13 @@ For more information about managing a large number of clients, see xref:speciali
 
 One of {sl-micro} {microversion} or {sles} {bci-mlm} is the operating system of the container host.
 
+[NOTE]
+====
+Minimum requirements are suitable for a quick test installation, such as a Proxy with one client.
+If you want to use a production environment start with recommended values.
+====
+
+
 [cols="1,3,2", options="header"]
 .Proxy Hardware Requirements
 |===
@@ -185,13 +192,17 @@ One of {sl-micro} {microversion} or {sles} {bci-mlm} is the operating system of 
 | {x86_64}, {arm}
 | Minimum 2 dedicated 64-bit CPU cores
 
+|
+| Recommended
+| The same as minimum values
+
 | RAM
 | Minimum
 | 2 GB
 
 |
 | Recommended
-| 8 GB
+| The same as minimum values
 
 | Disk Space
 | [path]``/`` (root directory)
