--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-air-gapped-deployment-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-air-gapped-deployment-mlm.adoc
@@ -10,7 +10,7 @@ This type of deployment is commonly used in high-security environments such as m
 
 [NOTE]
 ====
-At the moment, air-gapped deployment is available only on {sle-micro}.
+At the moment, air-gapped deployment is available only on {sl-micro}.
 ====
 
 
