--- a/modules/installation-and-upgrade/pages/container-deployment/generate_proxy_config.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/generate_proxy_config.adoc
@@ -27,6 +27,13 @@ This new entry will be shown under previously entered Proxy FQDN value and will 
 . In the [guimenu]``Parent FQDN`` field type fully qualified domain name for the {productname} Server or another {productname} Proxy.
 . In the [guimenu]``Proxy SSH port`` field type SSH port on which SSH service is listening on {productname} Proxy. Recommended is to keep default 8022.
 . In the [guimenu]``Max Squid cache size [MB]`` field type maximal allowed size for Squid cache.
+
++
+
+// FIXME: Shall we increase this (= cache size) here to 80% for MLM Proxy 5.1, too? \/
+
++
+
   Recommended is to use at most 60% of available storage for the containers.
 +
 [NOTE]
