server hardware requirements https://github.com/SUSE/spacewalk/issues/26918

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -22,11 +22,11 @@ For {productname} {smr} hardware requirements, see xref:retail:retail-requiremen
 [[server-hardware-requirements]]
 == Server Requirements
 
-One of {sle-micro} {microversion} or {sles} {sles} {bci-mlm} is the operating system of the container host.
+One of {sl-micro} {microversion} or {sles} {bci-mlm} is the operating system of the container host.
 In the following, {sles} as the installed host operating system is explicitly mentioned only if it matters.
-Otherwise we either write {sle-micro} or just host operating system.
+Otherwise we either write {sl-micro} or just host operating system.
 
-The container host with {sle-micro} as operating system requires as free disk space:
+The container host with {sl-micro} as operating system requires as free disk space:
 
 * Minimum for base installation 100 GB
 * Plus a minimum of 130 GB for repository data
