--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-vm-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-vm-mlm.adoc
@@ -75,13 +75,14 @@ If you want to use a production environment and need background information abou
 | Installation Method | Import Existing Disk Image
 | OS:                 | Linux
 | Version:            | {productname}-Server.x86_64-5.0.0-Build16.10.qcow2
-| Memory:             | 16 GB
-| CPU's:              | 4
-| Storage Format:     | _.qcow2_ 100 GB (Default) Root Partition
+| Memory:             | Minimum *)
+| CPU's:              | Minimum *)
+| Storage Format:     | _.qcow2_ 20 GB (Default) Root Partition
 | Name:               | test-setup
 | Network             | Bridge _br0_
 |===
 
+*) For minimum values, see xref:installation-and-upgrade:hardware-requirements.adoc#server-hardware-requirements[].
 
 
 [[minimmal.kvm.settings]]
@@ -89,7 +90,7 @@ If you want to use a production environment and need background information abou
 
 .Procedure: Creating Initial Setup
 . Create a new virtual machine using the downloaded {minimal} KVM image and select [guimenu]``Import existing disk image``.
-. Configure RAM and number of CPUs (at least 16 GB RAM and 4 CPUs).
+. Configure RAM and number of CPUs.
 . Name your KVM machine.
 . Click btn:[Begin Installation] to boot from the image.
 . At the JeOS Firstboot screen select start to continue.
@@ -150,7 +151,7 @@ transactional-update register -r <REGCODE> -e <your_email>
 +
 
 ----
-transactional-update register -p SUSE-Manager-Server/5.0/x86_64 -r <REGCODE>
+transactional-update register -p SUSE-Manager-Server/5.1/x86_64 -r <REGCODE>
 ----
 
 . Reboot.
