--- a/modules/installation-and-upgrade/pages/container-deployment/register-proxy-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/register-proxy-mlm.adoc
@@ -1,13 +1,13 @@
-== Register {sle-micro} and {productname} {productnumber} Proxy
+== Register {sl-micro} and {productname} {productnumber} Proxy
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
 // Before starting obtain your SUSE Manager Registration Code from SUSE Customer Center - https://scc.suse.com.
 
-.Procedure: Registering {sle-micro} and {productname} {productnumber} Proxy
+.Procedure: Registering {sl-micro} and {productname} {productnumber} Proxy
 . Boot the virtual machine.
 . Log in as `root`.
-. Register {sle-micro} with SCC.
+. Register {sl-micro} with SCC.
 +
 
 ----
@@ -20,7 +20,7 @@ transactional-update register -r <REGCODE> -e <your_email>
 +
 
 ----
-transactional-update register -p SUSE-Manager-Proxy/5.0/x86_64 -r <REGCODE>
+transactional-update register -p SUSE-Manager-Proxy/5.1/x86_64 -r <REGCODE>
 ----
 
 . Reboot.
