add volumes required after DB split

--- a/modules/installation-and-upgrade/pages/container-management/persistent-container-volumes.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/persistent-container-volumes.adoc
@@ -41,23 +41,24 @@ The following  volumes are stored under the **Podman** default storage location 
 |===
 |Volume Name | Volume Directory
 
+| **var-cache**
+| [path]``/var/cache``
+
 | **var-cobbler** 
 | [path]``/var/lib/cobbler``
+
+| **var-log**
+| [path]``/var/log``
 
 | **var-salt** 
 | [path]``/var/lib/salt``
 
-| **var-pgsql** 
-| [path]``/var/lib/pgsql``
-
-| **var-cache**
-| [path]``/var/cache``
+| **var-search** 
+| [path]``/var/lib/rhn/search``
 
 | **var-spacewalk** 
 | [path]``/var/spacewalk``
 
-| **var-log**
-| [path]``/var/log``
 |===
 
 
@@ -134,7 +135,27 @@ The following  volumes are stored under the **Podman** default storage location 
 
 |===
 
+.Persistent Volumes: **run**
+[cols="name,directory"]
+|===
+|Volume Name | Volume Directory
 
+| **run-salt-master**
+| [path]``/run/salt/master``
+|===
+
+== Database
+
+The following volumes are stored under the Podman default storage location on the server.
+
+.Persistent Volumes: **var/**
+[cols="name,directory"]
+|===
+|Volume Name | Volume Directory
+
+| **var-pgsql** 
+| [path]``/var/lib/pgsql/data``
+|===
 
 == Proxy
 
