add ref target https://bugzilla.suse.com/show_bug.cgi?id=1240842 https://github.com/SUSE/spacewalk/issues/26912

--- a/modules/common-workflows/pages/workflow-removing-channel.adoc
+++ b/modules/common-workflows/pages/workflow-removing-channel.adoc
@@ -126,6 +126,8 @@ spacewalk-remove-channel -a sles12-sp5-pool-x86_64
 
 
 
+
+[[cleaning-up-channel-packages]]
 ==== Clean the packages from the filesystem
 
 .Procedure: Clean the packages from the filesystem
