proxy hardware requirements (#3867)
* proxy hardware requirements
https://bugzilla.suse.com/show_bug.cgi?id=1240635
https://github.com/SUSE/spacewalk/issues/26883

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
@@ -16,7 +16,7 @@ VMware will be used as a sandbox for this installation.
 [IMPORTANT]
 ====
 The preferred method for deploying {productname} Proxy is to use one of the following available images.
-All tools are included in these images greatly simplifying deployment.
+All tools are included in these images simplifying deployment.
 ====
 
 Images for {productname} {productnumber} Proxy are available at link:https://www.suse.com/download/suse-manager/[{productname} {productnumber} VM images].
@@ -50,8 +50,15 @@ For additional information on the self install images, see:
 [[proxy-quickstart.sect.vmware.settings]]
 == Virtual Machine Settings - VMware
 
-This sections describes VMware configurations, focusing on the creation of an extra virtual disk essential for the {productname} Proxy storage partition within VMware environments.
+This section describes VMware configurations, focusing on the creation of an extra virtual disk essential for the {productname} Proxy storage partition within VMware environments.
 
+[NOTE]
+====
+This section specifies the minimum requirements.
+These are suitable for a quick test installation, such as a proxy with one client.
+
+If you want to use a production environment and need background information about disk space, see xref:installation-and-upgrade:hardware-requirements.adoc[].
+====
 
 .Procedure: Creating the VMware Virtual Machine
 
@@ -62,9 +69,9 @@ This sections describes VMware configurations, focusing on the creation of an ex
 
 . Create and name a new virtual machine based on the Guest OS Family [systemitem]``Linux`` and Guest OS Version {sle} 15 (64-bit).
 
-. Add an additional [systemitem]``Hard Disk 2`` of 500 GB (or more).
+. Add an additional [systemitem]``Hard Disk 2`` of 100 GB (or more).
 
-. Configure RAM and number of CPUs (at least 16 GB RAM and 4 CPUs).
+. Configure RAM and number of CPUs with minimum values. *)
 
 . Set the network adapter as required.
 
@@ -74,6 +81,7 @@ This sections describes VMware configurations, focusing on the creation of an ex
 
 . Proceed to the next section.
 
+*) For minimum values, see xref:installation-and-upgrade:hardware-requirements.adoc#proxy-hardware-requirements[].
 
 
 include::../register-proxy-suma.adoc[]
