--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
@@ -15,7 +15,7 @@ KVM will be combined with Virtual Machine Manager (_virt-manager_) as a sandbox 
 
 [IMPORTANT]
 ====
-The preferred method for deploying {productnumber} Proxy is to use one of the following available images.
+The preferred method for deploying {productname} Proxy is to use one of the following available images.
 All tools are included in these images simplifying deployment.
 ====
 
@@ -55,7 +55,8 @@ Enter the following settings when creating a new virtual machine using *virt-man
 [NOTE]
 ====
 This table specifies the minimum requirements.
-These are suitable for a quick test installation, such as a server with one client.
+These are suitable for a quick test installation, such as a proxy with one client.
+
 If you want to use a production environment and need background information about disk space, see xref:installation-and-upgrade:hardware-requirements.adoc[].
 ====
 
@@ -66,12 +67,14 @@ If you want to use a production environment and need background information abou
 | Installation Method | Import Existing Disk Image
 | OS:                 | Linux
 | Version:            | {productname}-Proxy.x86_64-5.0.0-*.qcow2
-| Memory:             | 2 GB (minimum)
-| CPU's:              | 2
-| Storage Format:     | _.qcow2_ 40 GB (Default) Root Partition
+| Memory:             | Minimum *)
+| CPU's:              | Minimum *)
+| Storage Format:     | _.qcow2_ 20 GB (Default) Root Partition
 | Name:               | test-setup
 | Network             | Bridge _br0_
 |===
+
+*) For minimum values, see xref:installation-and-upgrade:hardware-requirements.adoc#proxy-hardware-requirements[].
 
 
 [NOTE]
@@ -86,9 +89,11 @@ Storage requirements should be calculated for the number of ISO distribution ima
 [[proxy-minimmal.kvm.setup]]
 == Initial KVM Setup
 
+For settings, see xref:installation-and-upgrade:container-deployment/mlm/proxy-deployment-vm-mlm.adoc#proxy-quickstart.sect.kvm.settings[].
+
 .Procedure: Creating Initial Setup
 . Create a new virtual machine using the downloaded {minimal} KVM image and select [guimenu]``Import existing disk image``.
-. Configure RAM and number of CPUs (at least 16 GB RAM and 4 CPUs).
+. Configure RAM and number of CPUs.
 . Name your KVM machine and select the [guimenu]``Customize configuration before install`` check box.
 . Click btn:[Begin Installation] to boot from the image.
 . At the JeOS Firstboot screen select start to continue.
