--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -22,9 +22,9 @@ For {productname} {smr} hardware requirements, see xref:retail:retail-requiremen
 [[server-hardware-requirements]]
 == Server Requirements
 
-One of {sle-micro} {microversion} or {sles} {sles} {bci-mlm} is the operating system of the container host.
+One of {sl-micro} {microversion} or {sles} {bci-mlm} is the operating system of the container host.
 In the following, {sles} as the installed host operating system is explicitly mentioned only if it matters.
-Otherwise we either write {sle-micro} or just host operating system.
+Otherwise we either write {sl-micro} or just host operating system.
 
 The container host with {sle-micro} as operating system requires as free disk space:
 
@@ -171,6 +171,15 @@ For more information about managing a large number of clients, see xref:speciali
 [[proxy-hardware-requirements]]
 == Proxy Requirements
 
+One of {sl-micro} {microversion} or {sles} {bci-mlm} is the operating system of the container host.
+
+[NOTE]
+====
+Minimum requirements are suitable for a quick test installation, such as a Proxy with one client.
+If you want to use a production environment start with recommended values.
+====
+
+
 [cols="1,3,2", options="header"]
 .Proxy Hardware Requirements
 |===
@@ -183,17 +192,21 @@ For more information about managing a large number of clients, see xref:speciali
 | {x86_64}, {arm}
 | Minimum 2 dedicated 64-bit CPU cores
 
+|
+| Recommended
+| The same as minimum values
+
 | RAM
 | Minimum
 | 2 GB
 
 |
 | Recommended
-| 8 GB
+| The same as minimum values
 
 | Disk Space
 | [path]``/`` (root directory)
-| Minimum 40 GB
+| Minimum 20 GB
 
 |
 | [path]``/var/lib/containers/storage/volumes``
