server hardware requirements (#3870)
* server hardware requirements
https://github.com/SUSE/spacewalk/issues/26918

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vmdk-suma.adoc
@@ -66,9 +66,13 @@ This sections describes VMware configurations, focusing on the creation of an ex
 
 . Create and name a new virtual machine based on the Guest OS Family [systemitem]``Linux`` and Guest OS Version {sle} 15 (64-bit).
 
+// FIXME: do we want to keep this size here? \/
+
++
+
 . Add an additional [systemitem]``Hard Disk 2`` of 500 GB (or more).
 
-. Configure RAM and number of CPUs (at least 16 GB RAM and 4 CPUs).
+. Configure RAM and number of CPUs with minimum values. *)
 
 . Set the network adapter as required.
 
@@ -78,6 +82,7 @@ This sections describes VMware configurations, focusing on the creation of an ex
 
 . Proceed to the next section.
 
+*) For minimum values, see xref:installation-and-upgrade:hardware-requirements.adoc#proxy-hardware-requirements[].
 
 
 [[minimal.susemgr.prep]]
@@ -106,7 +111,7 @@ transactional-update register -r <REGCODE> -e <your_email>
 +
 
 ----
-transactional-update register -p SUSE-Manager-Server/5.0/x86_64 -r <REGCODE>
+transactional-update register -p SUSE-Manager-Server/5.1/x86_64 -r <REGCODE>
 ----
 
 . Reboot
