Apply suggestions from code review

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
@@ -93,7 +93,7 @@ For settings, see xref:installation-and-upgrade:container-deployment/mlm/proxy-d
 
 .Procedure: Creating Initial Setup
 . Create a new virtual machine using the downloaded {minimal} KVM image and select [guimenu]``Import existing disk image``.
-. Configure RAM and number of CPUs.
+. Configure RAM and number of CPUs with minimum values. *)
 . Name your KVM machine and select the [guimenu]``Customize configuration before install`` check box.
 . Click btn:[Begin Installation] to boot from the image.
 . At the JeOS Firstboot screen select start to continue.
