--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -176,7 +176,7 @@ For more information about managing a large number of clients, see xref:speciali
 [[proxy-hardware-requirements]]
 == Proxy Requirements
 
-One of {sl-micro} {microversion} or {sles} {bci-mlm} is the operating system of the container host.
+One of {sle-micro} {microversion} or {sles} {sles-version} {sp-version} is the operating system of the container host.
 
 [NOTE]
 ====
