--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
@@ -125,6 +125,7 @@ image::root-password.png[]
 
 . Proceed to the next section.
 
+*) For minimum values, see xref:installation-and-upgrade:hardware-requirements.adoc#proxy-hardware-requirements[].
 
 
 include::../register-proxy-suma.adoc[]
