add policycoreutils https://bugzilla.suse.com/show_bug.cgi?id=1240698 https://github.com/SUSE/spacewalk/issues/26902 https://github.com/SUSE/spacewalk/issues/26942

--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-mlm.adoc
@@ -207,16 +207,17 @@ zypper up
 
 . Reboot.
 
-. Log in as root and install [package]``podman`` plus [package]``mgrpxy`` and [package]``mgrpxy-bash-completion`` (if not already automatically installed):
+. Log in as root and install [package]``podman`` plus [package]``mgrpxy`` and [package]``mgrpxy-bash-completion`` (if not already automatically installed).
+  For systems running SELinux, [package]``policycoreutils`` is required:
 
 +
 
 [source,shell]
 ----
-zypper install podman mgrpxy mgrpxy-bash-completion
+zypper install podman mgrpxy mgrpxy-bash-completion policycoreutils
 ----
 
-. Start the Podman service by rebooting the system, or running a command:
+. Start the Podman service by rebooting the system, or running the command:
 
 +
 
