--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-mlm.adoc
@@ -284,16 +284,17 @@ zypper up
 ----
 
 . Reboot.
-. Log in as root and install [package]``podman`` plus [package]``mgradm`` and [package]``mgradm-bash-completion`` (if not already automatically installed):
+. Log in as root and install [package]``podman`` plus [package]``mgradm`` and [package]``mgradm-bash-completion`` (if not already automatically installed).
+  For systems running SELinux, [package]``policycoreutils`` is required:
 
 +
 
 [source,shell]
 ----
-zypper install podman mgradm mgradm-bash-completion
+zypper install podman mgradm mgradm-bash-completion policycoreutils
 ----
 
-. Start the Podman service by rebooting the system, or running a command:
+. Start the Podman service by rebooting the system, or running the command:
 
 +
 
