--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-migration-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-migration-mlm.adoc
@@ -13,7 +13,7 @@ endif::[]
 
 === General
 
-* To migrate a {productname} 4.3 Server to a container, you require a new machine with {sl-micro} {microversion} and [literal]``mgradm`` installed.
+* To migrate a {productname} 4.3 Server to a container, you require a new machine with {sl-micro} {microversion} or {sles} {bci-suma} and [literal]``mgradm`` installed.
 
 // FIXME?
 * An in-place migration from {productname} 4.3 to {productnumber} is unsupported because of the change of the underlying operating system from {sles} 15 SP4 to {sl-micro} {microversion}.
@@ -91,7 +91,7 @@ systemctl stop postgresql
 
 === SSH Connection Preparation
 
-Pre-installing {productname} on the prepared {sl-micro} {microversion} with [litaral]``mgradm`` is not necessary.
+Pre-installing {productname} on the prepared {sl-micro} or {sles}  with [litaral]``mgradm`` is not necessary.
 The migration process will take care of the server installation.
 
 .Procedure: Preparing the SSH Connection
