--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-migration-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-migration-mlm.adoc
@@ -14,7 +14,7 @@ This section describes migrating from Proxy 4.3 using the [command]``mgrpxy`` to
 [IMPORTANT]
 ====
 An in-place migration from {productname} 4.3 to {productnumber} is unsupported.
-The host operating system has changed from {sles} 15 SP4 to {sl-micro} {microversion} or {sles} {bci-suma}.
+The host operating system has changed from {sles} 15 SP4 to {sl-micro} {microversion} or {sles} {bci-mlm}.
 
 The traditional contact protocol is no longer supported in {productname} 5.0 and later.
 Before migrating from {productname} 4.3 to {productnumber}, any existing traditional clients including the traditional proxies must be migrated to {salt}.
