--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-migration-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-migration-mlm.adoc
@@ -13,10 +13,11 @@ endif::[]
 
 === General
 
-* To migrate a {productname} 4.3 Server to a container, you require a new machine with {sl-micro} {microversion} and [literal]``mgradm`` installed.
+* To migrate a {productname} 4.3 Server to a container, you require a new machine with {sl-micro} {microversion} or {sles} {bci-mlm} and [literal]``mgradm`` installed.
 
 // FIXME?
-* An in-place migration from {productname} 4.3 to {productnumber} is unsupported because of the change of the underlying operating system from {sles} 15 SP4 to {sl-micro} {microversion}.
+* An in-place migration from {productname} 4.3 to {productnumber} is unsupported.
+  The underlying operating system has been changed from {sles} 15 SP4 to {sl-micro} or {sles} {bci-mlm}.
 
 * Before migrating from {productname} 4.3 to {productnumber}, any existing traditional clients including the traditional proxies must be migrated to {salt}.
 For more information about migrating traditional {productname} 4.3 clients to {salt} clients, see https://documentation.suse.com/suma/4.3/en/suse-manager/client-configuration/contact-methods-migrate-traditional.html.
@@ -91,7 +92,7 @@ systemctl stop postgresql
 
 === SSH Connection Preparation
 
-Pre-installing {productname} on the prepared {sl-micro} {microversion} with [litaral]``mgradm`` is not necessary.
+Pre-installing {productname} on the prepared {sl-micro} or {sles}  with [litaral]``mgradm`` is not necessary.
 The migration process will take care of the server installation.
 
 .Procedure: Preparing the SSH Connection
