--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
@@ -13,9 +13,10 @@ endif::[]
 
 === General
 
-* To migrate a {productname} 4.3 Server to a container, you require a new machine with {sle-micro} 5.5 and [literal]``mgradm`` installed.
+* To migrate a {productname} 4.3 Server to a container, you require a new machine with {sle-micro} {microversion} or {sles} {bci-suma} and [literal]``mgradm`` installed.
 
-* An in-place migration from {productname} 4.3 to 5.0 is unsupported because of the change of the underlying operating system from {sles} 15 SP4 to {sle-micro} {microversion}.
+* An in-place migration from {productname} 4.3 to {productnumber} is unsupported.
+  The underlying operating system has been changed from {sles} 15 SP4 to {sle-micro} or {sles} {bci-suma}.
 
 * Before migrating from {productname} 4.3 to {productnumber}, any existing traditional clients including the traditional proxies must be migrated to {salt}.
 ** For more information about migrating traditional {productname} 4.3 clients to {salt} clients, see https://documentation.suse.com/suma/4.3/en/suse-manager/client-configuration/contact-methods-migrate-traditional.html.
