--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
@@ -84,7 +84,7 @@ If you want to use a production environment and need background information abou
 
 .Procedure: Creating Initial Setup
 . Create a new virtual machine using the downloaded {minimal} KVM image and select [guimenu]``Import existing disk image``.
-. Configure RAM and number of CPUs.
+. Configure RAM and number of CPUs with minimum values. *)
 . Name your KVM machine.
 . Click btn:[Begin Installation] to boot from the image.
 . At the JeOS Firstboot screen select start to continue.
@@ -116,6 +116,8 @@ image::root-password.png[]
 
 . Proceed to the next section.
 
+*) For minimum values, see xref:installation-and-upgrade:hardware-requirements.adoc#proxy-hardware-requirements[].
+
 
 
 == Register {sle-micro} and {productname} {productnumber} Server
@@ -145,7 +147,7 @@ transactional-update register -r <REGCODE> -e <your_email>
 +
 
 ----
-transactional-update register -p SUSE-Manager-Server/5.1/x86_64 -r <REGCODE>
+transactional-update register -p SUSE-Manager-Server/5.0/x86_64 -r <REGCODE>
 ----
 
 . Reboot.
