add ref target (#3872)
* add ref target
https://bugzilla.suse.com/show_bug.cgi?id=1240842
https://github.com/SUSE/spacewalk/issues/26912
* remove obsolete section

--- a/modules/common-workflows/pages/workflow-removing-channel.adoc
+++ b/modules/common-workflows/pages/workflow-removing-channel.adoc
@@ -117,29 +117,13 @@ spacewalk-remove-channel -a sles12-sp5-pool-x86_64
 //----
 
 
+[[cleaning-up-channel-packages]]
 ==== Remove packages from the database via the {webui}
 
 .Procedure: Remove packages from the database via the {webui}
 . After removing the channel, you need to delete the packages from the database via the {webui}.
 . In the {productname} {webui} navigate to menu:SUSEManager[Software > Manage > Packages].
 . Select [literal]``Package in no channel``, and delete the packages.
-
-
-
-==== Clean the packages from the filesystem
-
-.Procedure: Clean the packages from the filesystem
-. The following command checks for anything that is still showing in the filesystem, but not in the SUMA database and then removes it.
-+
-----
-# spacewalk-data-fsck -r -S -C -O
-----
-+
-[WARNING]
-====
-The final cleanup command can take several minutes, or even hours to complete.
-====
-
 
 
 == Related topics
