--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -615,7 +615,7 @@ This section demonstrates how to generate client/server certificates for Prometh
 
 +
 
-Ensure that the [systemitem]``set-cname`` parameter is the fully qualified domain name (FQDN) of your Salt client.
+Ensure that the [systemitem]``set-cname`` parameter is the fully qualified domain name (FQDN) of your {salt} client.
 You can use the the [systemitem]``set-cname`` parameter multiple times if you require multiple aliases:
 
 +
