--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -480,7 +480,7 @@ Every salt_queue value has a label named `queue` with the queue number as value.
 
 === Monitoring Managed Systems
 
-Prometheus metrics exporters can be installed and configured on Salt clients using formulas.
+Prometheus metrics exporters can be installed and configured on {salt} clients using formulas.
 The packages are available from the {productname} client tools channels, and can be enabled and configured directly in the {productname} {webui}.
 
 These exporters can be installed on managed systems:
@@ -494,7 +494,7 @@ These exporters can be installed on managed systems:
 
 [NOTE]
 ====
-On {sle-micro}, only the Node exporter and the Blackbox exporter are available.
+On {sl-micro}, only the Node exporter and the Blackbox exporter are available.
 ====
 
 When you have the exporters installed and configured, you can start using Prometheus to collect metrics from the monitored systems.
@@ -620,6 +620,7 @@ You can use the the [systemitem]``set-cname`` parameter multiple times if you re
 
 +
 
+[source, shell]
 ----
 mgrctl exec -ti -- mgr-ssl-tool --gen-server --dir="/root/ssl-build" --set-country="COUNTRY" \
   --set-state="STATE" --set-city="CITY" --set-org="ORGANIZATION" \
