--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-migration-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-migration-mlm.adoc
@@ -13,16 +13,20 @@ endif::[]
 
 === General
 
+[IMPORTANT]
+====
+* Before migrating from {productname} 4.3 to {productnumber}, any existing traditional clients including the traditional proxies must be migrated to {salt}.
+For more information about migrating traditional {productname} 4.3 clients to {salt} clients, see https://documentation.suse.com/suma/4.3/en/suse-manager/client-configuration/contact-methods-migrate-traditional.html.
+
+* Traditional contact protocol is no longer supported in {productname} 5.0 and later.
+====
+
 * To migrate a {productname} 4.3 Server to a container, you require a new machine with {sl-micro} {microversion} or {sles} {bci-mlm} and [literal]``mgradm`` installed.
 
 // FIXME?
 * An in-place migration from {productname} 4.3 to {productnumber} is unsupported.
   The underlying operating system has been changed from {sles} 15 SP4 to {sl-micro} or {sles} {bci-mlm}.
 
-* Before migrating from {productname} 4.3 to {productnumber}, any existing traditional clients including the traditional proxies must be migrated to {salt}.
-For more information about migrating traditional {productname} 4.3 clients to {salt} clients, see https://documentation.suse.com/suma/4.3/en/suse-manager/client-configuration/contact-methods-migrate-traditional.html.
-
-* Traditional contact protocol is no longer supported in {productname} 5.0 and later.
 
 
 === Hostnames
