--- a/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-server-containers.adoc
@@ -1,26 +1,76 @@
 = {productname} Server Upgrade
 
+// FIXME: Shouldn't we better say:
+//        "... to upgrade the host operating system first."
+//        or, maybe:
+//        "... to upgrade the host operating system and especially the
+//         [literal]``mgradm`` tool first."
+
 Before running the upgrade command, it is recommended to upgrade the [literal]``mgradm`` tool first.
 
 .Procedure: Upgrading Server
 . Refresh software repository with [command]``zypper``:
+
 +
+
+[source,shell]
 ----
 zypper ref
 ----
-. Apply available updates with [command]``transactional-update``:
+
+. Depending on the host operating system, proceed with these steps:
+
 +
+
+On a transactional system such as {sl-micro} or {leapmicro}::
+
++
+
+--
+
+.. Apply available updates with [command]``transactional-update``:
+
++
+
+[source,shell]
 ----
 transactional-update
 ----
-. If updates were applied, [literal]``reboot``.
 
-. The {productname} Server container can be updated using the following command:
+--
+
+
+On {sles} or {leap}::
+
 +
 
+--
+
+.. Update installed software:
+
++
+
+[source,shell]
+----
+zypper up
+----
+
+--
+
++
+
+. If updates were applied, [literal]``reboot``.
+
+
+. The {productname} Server container can be updated using the following command:
+
++
+
+[source,shell]
 ----
 mgradm upgrade podman
 ----
+
 +
 
 This command will bring the status of the container up-to-date and restart the server.
