Fixed removing Salt bundle client procedure in Client Configuration https://github.com/SUSE/spacewalk/issues/26984

--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -124,11 +124,14 @@ zypper rm salt salt-minion python*-salt sle-manager-tools-release
 .Procedure: Salt Bundle Client - Manual Registration Cleanup
 
 . To unregister, run:
+
 +
+
+[source,shell]
 ----
 systemctl stop venv-salt-minion
 zypper rm -y venv-salt-minion
-rm /etc/zypp/repos.d/susemanager\:channels.repo /etc/venv-salt-minion/*
+rm /etc/zypp/repos.d/susemanager\:bootstrap.repo
 rm -r /etc/venv-salt-minion/*
 ----
 
