--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vm-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vm-mlm.adoc
@@ -65,7 +65,7 @@ If you want to use a production environment and need background information abou
 | Version:            | {productname}-Proxy.x86_64-5.1.*.qcow2
 | Memory:             | Minimum *)
 | CPU's:              | Minimum *)
-| Storage Format:     | _.qcow2_ 20 GB (Default) Root Partition
+| Storage Format:     | _.qcow2_ 40 GB (Default) Root Partition
 | Name:               | test-setup
 | Network             | Bridge _br0_
 |===
@@ -89,7 +89,7 @@ For settings, see xref:installation-and-upgrade:container-deployment/mlm/proxy-d
 
 .Procedure: Creating Initial Setup
 . Create a new virtual machine using the downloaded {minimal} KVM image and select [guimenu]``Import existing disk image``.
-. Configure RAM and number of CPUs.
+. Configure RAM and number of CPUs with minimum values. *)
 . Name your KVM machine and select the [guimenu]``Customize configuration before install`` check box.
 . Click btn:[Begin Installation] to boot from the image.
 . At the JeOS Firstboot screen select start to continue.
@@ -121,6 +121,7 @@ image::root-password.png[]
 
 . Proceed to the next section.
 
+*) For minimum values, see xref:installation-and-upgrade:hardware-requirements.adoc#proxy-hardware-requirements[].
 
 
 include::../register-proxy-mlm.adoc[]
