backport 5.0: server/proxy hardware requirements (#3867) (#3873)
* proxy hardware requirements (#3867)

* proxy hardware requirements
https://bugzilla.suse.com/show_bug.cgi?id=1240635
https://github.com/SUSE/spacewalk/issues/26883

* Apply suggestions from code review
* Update proxy-deployment-vm-suma.adoc
* Update modules/installation-and-upgrade/pages/hardware-requirements.adoc
* Update modules/installation-and-upgrade/pages/container-deployment/generate_proxy_config.adoc
* 40 GB /
per feedback
additional server changes

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -66,7 +66,7 @@ For more information about filesystem and partitioning details, see xref:install
 
 | Disk Space
 | [path]``/`` (root directory)
-| 20 GB
+| 40 GB
 
 |
 | [path]``/var/lib/containers/storage/volumes``
@@ -90,7 +90,7 @@ For more information about filesystem and partitioning details, see xref:install
 // * Storage requirments should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
 
 
-The images by default have a 20 GB [literal]``/`` partition.
+The images by default have a 40 GB [literal]``/`` partition.
 The cloud image of {sle-micro} 5.5 has just a 5 GB [literal]``/`` partition. Both work flawlessly with {productname}.
 As long as external storage is mounted to [path]``/var/lib/containers/storage/volumes``, {productname} does not need or use storage on the [literal]``/`` partition, but leaves that to the management of the container host itself.
 
@@ -176,6 +176,15 @@ For more information about managing a large number of clients, see xref:speciali
 [[proxy-hardware-requirements]]
 == Proxy Requirements
 
+One of {sle-micro} {microversion} or {sles} {sles-version} {sp-version} is the operating system of the container host.
+
+[NOTE]
+====
+Minimum requirements are suitable for a quick test installation, such as a Proxy with one client.
+If you want to use a production environment start with recommended values.
+====
+
+
 [cols="1,3,2", options="header"]
 .Proxy Hardware Requirements
 |===
@@ -188,13 +197,17 @@ For more information about managing a large number of clients, see xref:speciali
 | {x86_64}, {arm}
 | Minimum 2 dedicated 64-bit CPU cores
 
+|
+| Recommended
+| The same as minimum values
+
 | RAM
 | Minimum
 | 2 GB
 
 |
 | Recommended
-| 8 GB
+| The same as minimum values
 
 | Disk Space
 | [path]``/`` (root directory)
