update navlists to support new branding

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -3,7 +3,13 @@
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Administration Guide
 include::./branding/pdf/entities.adoc[]
+:doctype: book
+:title-page:
+:preface-title: Preface
+:toc-title: Contents
 :toclevels: 3
+:sectnumlevels: 2
+:source-highlighter: rouge
 endif::[]
 
 
