--- a/modules/retail/nav-retail-guide.adoc
+++ b/modules/retail/nav-retail-guide.adoc
@@ -2,8 +2,13 @@
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Retail Guide
 include::./branding/pdf/entities.adoc[]
-:toclevels: 2
 :doctype: book
+:title-page:
+:preface-title: Preface
+:toc-title: Contents
+:toclevels: 3
+:sectnumlevels: 2
+:source-highlighter: rouge
 endif::[]
 
 
