fix salt minion proç too

--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -92,21 +92,30 @@ Instead of [command]``zypper`` use equivalent packager commands such as [command
 
 .Procedure: Deleting SLES 12 and 15 Clients
 . Stop the salt-minion service:
+
 +
+
+[source,shell]
 ----
 systemctl stop salt-minion
 ----
 +
 . Remove the repositories and configuration files:
+
 +
+
+[source,shell]
 ----
-rm /etc/zypp/repos.d/susemanager\:channels.repo
+rm /etc/zypp/repos.d/susemanager\:bootstrap.repo
 rm -r /etc/sysconfig/rhn/
 rm -r /etc/salt/
 ----
 +
 . Remove Client Packages:
+
 +
+
+[source,shell]
 ----
 zypper rm salt salt-minion python*-salt sle-manager-tools-release
 ----
