--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -129,7 +129,7 @@ zypper rm salt salt-minion python*-salt sle-manager-tools-release
 [source,shell]
 ----
 systemctl stop venv-salt-minion
-zypper rm -y venv-salt-minion
+zypper rm -y venv-salt-minion sle-manager-tools-release
 rm /etc/zypp/repos.d/susemanager\:bootstrap.repo
 rm -r /etc/venv-salt-minion/*
 ----
