--- a/modules/quickstart/nav-quickstart-guide.adoc
+++ b/modules/quickstart/nav-quickstart-guide.adoc
@@ -2,8 +2,12 @@
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Quick Start Guide
 include::./branding/pdf/entities.adoc[]
-:toclevels: 3
 :doctype: book
+:title-page:
+:preface-title: Preface
+:toc-title: Contents
+:toclevels: 3
+:source-highlighter: rouge
 endif::[]
 
 
