--- a/modules/legal/nav-legal-guide.adoc
+++ b/modules/legal/nav-legal-guide.adoc
@@ -2,8 +2,12 @@
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Legal
 include::./branding/pdf/entities.adoc[]
-:toclevels: 2
 :doctype: book
+:title-page:
+:preface-title: Preface
+:toc-title: Contents
+:source-highlighter: rouge
+:toclevels: 2
 endif::[]
 
 * Legal
