New file added for ISS v3. Skeleton file.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -42,7 +42,8 @@ endif::[]
 ** xref:infra-maintenance.adoc[Infrastructure Maintenance Tasks]
 ** xref:iss_intro.adoc[Inter-Server Synchronization]
 *** xref:iss.adoc[Inter-Server Synchronization version 1]
-*** xref:iss_v2.adoc[Inter-Server Synchronization version 2]
+*** xref:iss_v2.adoc[Inter-Server Synchronization - Version 2]
+*** xref:iss_v3.adoc[Inter-Server Synchronization - Version 3]
 ** xref:live-patching.adoc[Live Patching]
 *** xref:live-patching-channel-setup.adoc[Channel Setup for Live Patching]
 *** xref:live-patching-sles15.adoc[Live Patching on SLES 15]
