--- a/modules/administration/pages/iss_intro.adoc
+++ b/modules/administration/pages/iss_intro.adoc
@@ -1,11 +1,27 @@
 [[iss_intro]]
 = Inter-Server Synchronization
 
-If you have more than one {productname} installation, you will need to copy contents between servers.
-Inter-Server Synchronization (ISS) allows you to export data from one server (source) and import it on another (target) server.
-This is useful for hub deployment scenarios or disconnected setups.
+//If you have more than one {productname} installation, you will need to copy contents between servers.
+//Inter-Server Synchronization (ISS) allows you to export data from one server (source) and import it on another (target) server.
+//This is useful for hub deployment scenarios or disconnected setups.
+Inter-Server Synchronization (ISS) allows transfer of data such as software channels and configuration channels from one {productname} server to another.
 
+Each server can take on any of the existing roles which are distinguished based on the direction of the data transfer.
+The main server is the one the data is transferred from, and is referred to as hub server.
+The server the data is transferred to is referred to as peripheral server.
 
+Once the connection between hub and peripheral servers is established, the hub server becomes the main source of data for the peripheral server, effectively replacing {scclongform}.
+
+The main characteristics of this feature are:
+
+* There can only be one hub server per communication / link, and one or more peripheral servers.
+  One peripheral server can be linked to one hub serevr only. 
+
+* Content can be synchronized on regular basis, or on demand.
+
+* SUSE currently supports two types of Inter-Server Synchronization: xref:administration:iss_v2.adoc[] and xref:administration:iss_v3.adoc[].
+
+////
 [NOTE]
 ====
 With the version 2 ISS implementation {suse} removed the master/slave notion.
@@ -21,4 +37,4 @@ Starting with {productname} 5.0, the Inter-Server Synchronization (Version 1) f
 ====
 
 endif::[]
-
+////
