--- a/modules/administration/pages/iss_intro.adoc
+++ b/modules/administration/pages/iss_intro.adoc
@@ -15,11 +15,12 @@ Once the connection between hub and peripheral servers is established, the hub s
 The main characteristics of this feature are:
 
 * There can only be one hub server per communication / link, and one or more peripheral servers.
-  One peripheral server can be linked to one hub serevr only. 
+
+* One peripheral server can be linked to one hub serevr only. 
 
 * Content can be synchronized on regular basis, or on demand.
 
-* SUSE currently supports two types of Inter-Server Synchronization: xref:administration:iss_v2.adoc[] and xref:administration:iss_v3.adoc[].
+SUSE supports two types of Inter-Server Synchronization: xref:administration:iss_v2.adoc[] and xref:administration:iss_v3.adoc[].
 
 ////
 [NOTE]
