--- a/modules/administration/pages/iss_intro.adoc
+++ b/modules/administration/pages/iss_intro.adoc
@@ -20,7 +20,7 @@ The main characteristics of this feature are:
 
 * Content can be synchronized on regular basis, or on demand.
 
-SUSE supports two types of Inter-Server Synchronization: xref:administration:iss_v2.adoc[] and xref:administration:iss_v3.adoc[].
+{productname} supports two types of Inter-Server Synchronization: xref:administration:iss_v2.adoc[] and xref:administration:iss_v3.adoc[].
 
 ////
 [NOTE]
