Documenting Hub online syncing.

--- a/modules/administration/pages/iss_intro.adoc
+++ b/modules/administration/pages/iss_intro.adoc
@@ -6,12 +6,18 @@ Inter-Server Synchronization (ISS) allows you to export data from one server (so
 This is useful for hub deployment scenarios or disconnected setups.
 
 
+////
 [NOTE]
 ====
 With the version 2 ISS implementation {suse} removed the master/slave notion.
 Contents can be exported and imported in any direction between any {productname} server.
 ====
+////
 
+{productname} supports the following mechanisms of synchronization between servers:
+
+* xref:administration:iss_v2.adoc[] 
+* xref:specialized-guides:large-deployments/hub-online-sync.adoc[]
 
 ifeval::[{mlm-content} == true]
 
