--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -99,6 +99,7 @@ endif::[]
 **** xref:large-deployments/hub-namespaces.adoc[Hub Namespaces]
 **** xref:large-deployments/hub-auth.adoc[Hub Authentication]
 **** xref:large-deployments/hub-reporting.adoc[Hub Reporting]
+**** xref:large-deployments/hub-online-sync.adoc[Hub Online Synchronization]
 *** xref:large-deployments/retail-large-scale.adoc[Large Retail Environments]
 *** xref:large-deployments/tuning.adoc[Tuning Large Installations]
 *** xref:large-deployments/monitoring.adoc[Monitoring Large Scale Deployments]
